--- a/findly-builder/src/app/components/result-insights/result-insights.component.html
+++ b/findly-builder/src/app/components/result-insights/result-insights.component.html
@@ -21,7 +21,9 @@
         </div>
     </div>
     <perfect-scrollbar class="scroll_content">             
-        
+        <div class="analy-dropdown-header">
+            <app-analytics-dropdown></app-analytics-dropdown>
+        </div>
         <div class="data-information-content col-12 m-0 row split-tables">
             <div class="col-12 box-content">
                 <div class="row m-0 col-12 p-0 align-items-center">                    
