--- a/findly-builder/src/app/components/user-engagement/user-engagement.component.scss
+++ b/findly-builder/src/app/components/user-engagement/user-engagement.component.scss
@@ -306,6 +306,10 @@
     }
 }
 
+.analy-dropdown-header{
+    padding: 25px 30px 10px 30px;
+}
+
 ::ng-deep perfect-scrollbar .ps--active-y {
     .ps__thumb-y {
         width: 3px !important;
