--- a/findly-builder/src/app/scss/styles.scss
+++ b/findly-builder/src/app/scss/styles.scss
@@ -3601,3 +3601,7 @@ emoji-mart{
     0% { transform: rotate(0deg); }
     100% { transform: rotate(360deg); }
 }
+
+.analy-dropdown-header{
+    padding: 25px 30px 10px 30px;
+}
