--- a/findly-builder/src/app/helpers/components/analytics-dropdown/analytics-dropdown.component.scss
+++ b/findly-builder/src/app/helpers/components/analytics-dropdown/analytics-dropdown.component.scss
@@ -32,9 +32,13 @@
             .list-item-li{
                 padding: 0 !important;
                 a{
-
+                    
                 }
+                
             }
         }
     }
+}
+.active{
+    font-weight: bold
 }
