FLY-1966 story completed

--- a/findly-builder/src/app/components/result-templates/result-templates.component.html
+++ b/findly-builder/src/app/components/result-templates/result-templates.component.html
@@ -276,7 +276,8 @@
                 {{resultListObj.groupSetting.fieldName? resultListObj.groupSetting.fieldName : "Choose field"}}
 
               </button>
-              <ul class="dropdown-menu content-menu faq-filter-add col-12 mw-100" ngbDropdownMenu style="overflow-y: hidden;">
+              <ul class="dropdown-menu content-menu faq-filter-add col-12 mw-100" ngbDropdownMenu
+                style="overflow-y: hidden;">
                 <li class="search-box">
                   <input id="searchBoxId" [(ngModel)]="field_name" autocomplete="off" type="text"
                     (keydown)="$event.stopPropagation()" placeholder="Search" class="seach-input pl-3" />
@@ -301,7 +302,7 @@
           <div class="col-12 heading">Values Available</div>
           <ng-container>
             <div class="col-12 title-values" *ngFor="let value of fieldValues">
-              {{value}}</div>
+              {{value?.text?value.text:value}}</div>
           </ng-container>
         </div>
       </ng-container>
@@ -1904,12 +1905,12 @@
                 <div class="row m-0 align-items-center">
                   <div class="kr-sg-dropdowns" ngbDropdown [placement]="'bottom'" #descDrop="ngbDropdown">
                      [ngClass]="{'disabled': addEditFacetObj._id}" -->
-                    <!-- <div class="kr-sg-input-search dropdown dropdown-open line-height-0">
+                <!-- <div class="kr-sg-input-search dropdown dropdown-open line-height-0">
                       <img src="assets/icons/search_gray.svg" class="search-icon">
                       <button id="btn_select_facet_field" class="dropdown-toggle dropdown-input search-with-dropdown"
                         data-toggle="dropdown"></button> -->
-                      <!-- <input type="text"  maxlength="60" placeholder="Search For Field" id="facets-search-input" class="input-search dropdown-toggle dropdown-input" [class.err-block]="((!addEditFacetObj.fieldId.length) && submitted)" data-toggle="dropdown" (keyup)="getFieldAutoComplete(addEditFacetObj.fieldName)" [(ngModel)]="addEditFacetObj.fieldName"> -->
-                      <!-- <input type="text" maxlength="60" placeholder="Search Field" id="facets-search-input"
+                <!-- <input type="text"  maxlength="60" placeholder="Search For Field" id="facets-search-input" class="input-search dropdown-toggle dropdown-input" [class.err-block]="((!addEditFacetObj.fieldId.length) && submitted)" data-toggle="dropdown" (keyup)="getFieldAutoComplete(addEditFacetObj.fieldName)" [(ngModel)]="addEditFacetObj.fieldName"> -->
+                <!-- <input type="text" maxlength="60" placeholder="Search Field" id="facets-search-input"
                         class="input-search dropdown-toggle dropdown-input" data-toggle="dropdown" autocomplete="off"
                         [class.err-block]="((!(preview_desc?.length) && submitted)||!(templateFieldValidateObj.description))"
                         (keyup)="searchlist('description',$event.target.value,fieldData)"
@@ -1924,33 +1925,34 @@
                           </li>
                         </perfect-scrollbar>
                       </ul> -->
-                      <div class="label-text mb-1">{{'resultTemplate.description'|translate}}</div>
-                      <div class="col-12 row ml-0 mr-0 mb-3 p-0 align-items-center right-side-sec">
-                        <div class="kr-sg-dropdowns col-12 p-0" ngbDropdown (click)="clearcontentdesc()" #descDrop="ngbDropdown">
-                          <div class="dropdown dropdown-open">
-                            <button class="dropdown-toggle dropdown-input" id="dropdownBasic1"
-                              [class.err-block]="((!(preview_desc?.length) && submitted)||!(templateFieldValidateObj.description))"
-                              [class.err-block]="((!(preview_desc?.length) && submitted)||!(templateFieldValidateObj.description))"
-                              data-toggle="dropdown" (click)="clearcontentdesc();" ngbDropdownToggle>
-                              {{preview_desc ? preview_desc :"Choose field"}}
-                            </button>
-                            <ul class="dropdown-menu content-menu faq-filter-add col-12 mw-100" style="overflow-y: hidden;"
-                              ngbDropdownMenu>
-                              <li class="search-box">
-                                <input id="searchBoxId1" autocomplete="off" type="text" (keydown)="$event.stopPropagation()"
-                                  placeholder="Search" class="seach-input pl-3"
-                                  (keyup)="searchlist('description',$event.target.value,fieldData)"
-                                  (focus)="searchlist('description',$event.target.value,fieldData);" autofocus />
-                              </li>
-                              <perfect-scrollbar class="scroll-search-field h-189">
-                                <ng-container *ngIf="desc_fieldData && desc_fieldData.length">
-                                  <li ngbDropdownItem *ngFor="let field of desc_fieldData"
-                                    (click)="filedSelect('description',field)"
-                                    [ngClass]="{'highlight':preview_desc===field.fieldName}">
-                                    {{ field.fieldName }}</li>
-                                </ng-container>
-                              </perfect-scrollbar>
-                            </ul>
+                <div class="label-text mb-1">{{'resultTemplate.description'|translate}}</div>
+                <div class="col-12 row ml-0 mr-0 mb-3 p-0 align-items-center right-side-sec">
+                  <div class="kr-sg-dropdowns col-12 p-0" ngbDropdown (click)="clearcontentdesc()"
+                    #descDrop="ngbDropdown">
+                    <div class="dropdown dropdown-open">
+                      <button class="dropdown-toggle dropdown-input" id="dropdownBasic1"
+                        [class.err-block]="((!(preview_desc?.length) && submitted)||!(templateFieldValidateObj.description))"
+                        [class.err-block]="((!(preview_desc?.length) && submitted)||!(templateFieldValidateObj.description))"
+                        data-toggle="dropdown" (click)="clearcontentdesc();" ngbDropdownToggle>
+                        {{preview_desc ? preview_desc :"Choose field"}}
+                      </button>
+                      <ul class="dropdown-menu content-menu faq-filter-add col-12 mw-100" style="overflow-y: hidden;"
+                        ngbDropdownMenu>
+                        <li class="search-box">
+                          <input id="searchBoxId1" autocomplete="off" type="text" (keydown)="$event.stopPropagation()"
+                            placeholder="Search" class="seach-input pl-3"
+                            (keyup)="searchlist('description',$event.target.value,fieldData)"
+                            (focus)="searchlist('description',$event.target.value,fieldData);" autofocus />
+                        </li>
+                        <perfect-scrollbar class="scroll-search-field h-189">
+                          <ng-container *ngIf="desc_fieldData && desc_fieldData.length">
+                            <li ngbDropdownItem *ngFor="let field of desc_fieldData"
+                              (click)="filedSelect('description',field)"
+                              [ngClass]="{'highlight':preview_desc===field.fieldName}">
+                              {{ field.fieldName }}</li>
+                          </ng-container>
+                        </perfect-scrollbar>
+                      </ul>
                     </div>
                   </div>
                 </div>
@@ -1962,13 +1964,13 @@
                 <!-- <div class="label-text mb-1">Image</div>
                 <div class="row m-0 align-items-center">
                   <div class="kr-sg-dropdowns" ngbDropdown [placement]="'bottom'" #imgDrop="ngbDropdown"> -->
-                    <!-- [ngClass]="{'disabled': addEditFacetObj._id}" -->
-                    <!-- <div class="kr-sg-input-search dropdown dropdown-open line-height-0">
+                <!-- [ngClass]="{'disabled': addEditFacetObj._id}" -->
+                <!-- <div class="kr-sg-input-search dropdown dropdown-open line-height-0">
                       <img src="assets/icons/search_gray.svg" class="search-icon">
                       <button id="btn_select_facet_field" class="dropdown-toggle dropdown-input search-with-dropdown"
                         data-toggle="dropdown"></button>
                          <input type="text"  maxlength="60" placeholder="Search For Field" id="facets-search-input" class="input-search dropdown-toggle dropdown-input" [class.err-block]="((!addEditFacetObj.fieldId.length) && submitted)" data-toggle="dropdown" (keyup)="getFieldAutoComplete(addEditFacetObj.fieldName)" [(ngModel)]="addEditFacetObj.fieldName"> -->
-                      <!-- <input type="text" maxlength="60" placeholder="Search Field" id="facets-search-input"
+                <!-- <input type="text" maxlength="60" placeholder="Search Field" id="facets-search-input"
                         class="input-search dropdown-toggle dropdown-input" data-toggle="dropdown" autocomplete="off"
                         [class.err-block]="((!(preview_img?.length) && submitted)||!(templateFieldValidateObj.image))"
                         (keyup)="searchlist('image',$event.target.value,fieldData)"
@@ -1983,35 +1985,35 @@
                           </li>
                         </perfect-scrollbar> 
                       </ul> -->
-                      <div class="label-text mb-1">{{'resultTemplate.image'|translate}}</div>
-                      <div class="col-12 row ml-0 mr-0 mb-3 p-0 align-items-center right-side-sec">
-                        <div class="kr-sg-dropdowns col-12 p-0" ngbDropdown (click)="clearcontentimage();" #imgDrop="ngbDropdown">
-                          <div class="dropdown dropdown-open">
-                            <button class="dropdown-toggle dropdown-input" id="dropdownBasic1"
-                              [class.err-block]="((!(preview_img?.length) && submitted)||!(templateFieldValidateObj.image))"
-                              data-toggle="dropdown" (click)="clearcontentimage();" ngbDropdownToggle>
-                              {{preview_img ? preview_img :"Choose field"}}
-                            </button>
-                            <ul class="dropdown-menu content-menu faq-filter-add col-12 mw-100" style="overflow-y: hidden;"
-                              ngbDropdownMenu>
-                              <li class="search-box">
-                                <input id="searchBoxId2" autocomplete="off" type="text" (keydown)="$event.stopPropagation()"
-                                  placeholder="Search" class="seach-input pl-3"
-                                  (keyup)="searchlist('image',$event.target.value,fieldData)"
-                                  (focus)="searchlist('image',$event.target.value,fieldData);" autofocus />
-                              </li>
-                              <perfect-scrollbar class="scroll-search-field h-189">
-                                <ng-container *ngIf="img_fieldData && img_fieldData.length">
-                                  <li ngbDropdownItem *ngFor="let field of img_fieldData"
-                                    (click)="filedSelect('image',field)"
-                                    [ngClass]="{'highlight':preview_img===field.fieldName}">
-                                    {{ field.fieldName }}</li>
-                                </ng-container>
-                              </perfect-scrollbar>
-                            </ul>      
+                <div class="label-text mb-1">{{'resultTemplate.image'|translate}}</div>
+                <div class="col-12 row ml-0 mr-0 mb-3 p-0 align-items-center right-side-sec">
+                  <div class="kr-sg-dropdowns col-12 p-0" ngbDropdown (click)="clearcontentimage();"
+                    #imgDrop="ngbDropdown">
+                    <div class="dropdown dropdown-open">
+                      <button class="dropdown-toggle dropdown-input" id="dropdownBasic1"
+                        [class.err-block]="((!(preview_img?.length) && submitted)||!(templateFieldValidateObj.image))"
+                        data-toggle="dropdown" (click)="clearcontentimage();" ngbDropdownToggle>
+                        {{preview_img ? preview_img :"Choose field"}}
+                      </button>
+                      <ul class="dropdown-menu content-menu faq-filter-add col-12 mw-100" style="overflow-y: hidden;"
+                        ngbDropdownMenu>
+                        <li class="search-box">
+                          <input id="searchBoxId2" autocomplete="off" type="text" (keydown)="$event.stopPropagation()"
+                            placeholder="Search" class="seach-input pl-3"
+                            (keyup)="searchlist('image',$event.target.value,fieldData)"
+                            (focus)="searchlist('image',$event.target.value,fieldData);" autofocus />
+                        </li>
+                        <perfect-scrollbar class="scroll-search-field h-189">
+                          <ng-container *ngIf="img_fieldData && img_fieldData.length">
+                            <li ngbDropdownItem *ngFor="let field of img_fieldData" (click)="filedSelect('image',field)"
+                              [ngClass]="{'highlight':preview_img===field.fieldName}">
+                              {{ field.fieldName }}</li>
+                          </ng-container>
+                        </perfect-scrollbar>
+                      </ul>
                     </div>
-                        </div>
-                      </div>
+                  </div>
+                </div>
               </div>
             </div>
 
@@ -2063,30 +2065,30 @@
                             </li>
                           </perfect-scrollbar>
                         </ul> -->
-                        <div class="kr-sg-dropdowns col-12 pr-0 pl-0" ngbDropdown (click)="clearcontenturl();" #urlDrop="ngbDropdown">
-                          <div class="dropdown dropdown-open">
-                            <button class="dropdown-toggle dropdown-input" id="dropdownBasic1"
-                              [class.err-block]="((!(preview_url?.length) && submitted)||!(templateFieldValidateObj.image))"
-                              data-toggle="dropdown" (click)="clearcontenturl();" ngbDropdownToggle>
-                              {{preview_url ? preview_url :"Choose field"}}
-                            </button>
-                            <ul class="dropdown-menu content-menu faq-filter-add col-12 mw-100" style="overflow-y: hidden;"
-                              ngbDropdownMenu>
-                              <li class="search-box">
-                                <input id="searchBoxId3" autocomplete="off" type="text" (keydown)="$event.stopPropagation()"
-                                  placeholder="Search" class="seach-input pl-3"
-                                  (keyup)="searchlist('url',$event.target.value,fieldData)"
-                                  (focus)="searchlist('url',$event.target.value,fieldData);" autofocus />
-                              </li>
-                              <perfect-scrollbar class="scroll-search-field h-189">
-                                <ng-container *ngIf="url_fieldData && url_fieldData.length">
-                                  <li ngbDropdownItem *ngFor="let field of url_fieldData"
-                                    (click)="filedSelect('url',field)"
-                                    [ngClass]="{'highlight':preview_url===field.fieldName}">
-                                    {{ field.fieldName }}</li>
-                                </ng-container>
-                              </perfect-scrollbar>
-                            </ul>      
+                    <div class="kr-sg-dropdowns col-12 pr-0 pl-0" ngbDropdown (click)="clearcontenturl();"
+                      #urlDrop="ngbDropdown">
+                      <div class="dropdown dropdown-open">
+                        <button class="dropdown-toggle dropdown-input" id="dropdownBasic1"
+                          [class.err-block]="((!(preview_url?.length) && submitted)||!(templateFieldValidateObj.image))"
+                          data-toggle="dropdown" (click)="clearcontenturl();" ngbDropdownToggle>
+                          {{preview_url ? preview_url :"Choose field"}}
+                        </button>
+                        <ul class="dropdown-menu content-menu faq-filter-add col-12 mw-100" style="overflow-y: hidden;"
+                          ngbDropdownMenu>
+                          <li class="search-box">
+                            <input id="searchBoxId3" autocomplete="off" type="text" (keydown)="$event.stopPropagation()"
+                              placeholder="Search" class="seach-input pl-3"
+                              (keyup)="searchlist('url',$event.target.value,fieldData)"
+                              (focus)="searchlist('url',$event.target.value,fieldData);" autofocus />
+                          </li>
+                          <perfect-scrollbar class="scroll-search-field h-189">
+                            <ng-container *ngIf="url_fieldData && url_fieldData.length">
+                              <li ngbDropdownItem *ngFor="let field of url_fieldData" (click)="filedSelect('url',field)"
+                                [ngClass]="{'highlight':preview_url===field.fieldName}">
+                                {{ field.fieldName }}</li>
+                            </ng-container>
+                          </perfect-scrollbar>
+                        </ul>
                       </div>
                     </div>
                   </div>
